--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name="org.g5.ui.scene.Login" />
+        <activity android:name="org.g5.ui.Login" />
         <activity android:name="org.g5.ui.Menu" />
 
         <service
