--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,16 +20,23 @@
         tools:targetApi="31">
 
         <activity android:name=".Index"
-            android:exported="true">
+            android:exported="true"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <activity android:name="org.g5.ui.Login" />
-        <activity android:name="org.g5.ui.Menu" />
-        <activity android:name="org.g5.ui.Permission" />
+        <activity
+            android:name="org.g5.ui.Login"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name="org.g5.ui.Menu"
+            android:screenOrientation="portrait"/>
+        <activity
+            android:name="org.g5.ui.Permission"
+            android:screenOrientation="portrait" />
 
         <service
             android:name="org.g5.core.AppUsage"
